--- a/comunida/Views/People/Details.cshtml
+++ b/comunida/Views/People/Details.cshtml
@@ -11,6 +11,60 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.last_name)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.last_name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.telephone)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.telephone)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.email)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.about)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.about)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.availability)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.availability)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.city)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.city)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.country)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.country)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.state)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.state)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
         <dd>
