--- a/comunida/Views/Organizations/Create.cshtml
+++ b/comunida/Views/Organizations/Create.cshtml
@@ -33,6 +33,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="Requirements" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <textarea asp-for="Requirements" class="form-control" cols="40" rows="5"></textarea>
+
+                <span asp-validation-for="Requirements" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
