--- a/comunida/Views/People/Create.cshtml
+++ b/comunida/Views/People/Create.cshtml
@@ -1,23 +1,114 @@
 @model comunida.Models.Person
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Mentor Register";
+    var interests = ViewBag.interests;
 }
 
-<h2>Create</h2>
+<h2>Mentor Register</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Person</h4>
+
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="UserId" class="col-md-2 control-label"></label>
+            <label asp-for="name" class="col-md-2 control-label">Name</label>
             <div class="col-md-10">
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <input asp-for="name" class="form-control" />
+                <span asp-validation-for="name" class="text-danger"></span>
             </div>
         </div>
+        <div class="form-group">
+            <label asp-for="last_name" class="col-md-2 control-label">Last Name</label>
+            <div class="col-md-10">
+                <input asp-for="last_name" class="form-control" />
+                <span asp-validation-for="last_name" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="telephone" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="telephone" class="form-control" />
+                <span asp-validation-for="telephone" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="email" class="form-control" />
+                <span asp-validation-for="email" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="about" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <textarea asp-for="about" class="form-control" cols="40" rows="5"></textarea>
+                <span asp-validation-for="about" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="availability" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <textarea asp-for="availability" class="form-control" cols="40" rows="5"></textarea>
+                <span asp-validation-for="availability" class="text-danger"></span>
+            </div>
+        </div>
+
+        @*@Html.DropDownList("AvailableInterests", interests,
+            "Select Interests",
+            new { @class = "form-control" })*@
+
+        @*@Html.ListBoxFor(x => x.SelectedIds, interests as MultiSelectList)*@
+
+        @*@Html.ListBox("SelectedIds", interests as MultiSelectList,
+            new
+            {
+                @class = "chosen-select form-control"
+            })*@
+
+        <div class="form-group">
+            <div class="form-group">
+                <label class="col-md-2 control-label">Mentor Interests</label>
+                <div class="col-md-10">
+                    <SELECT NAME="interests" MULTIPLE SIZE=20 class="chosen-select form-control">
+                        @foreach (var i in interests)
+                        {
+                            <option value="@i.ID">@i.Name</option>
+                        }
+                    </SELECT>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="city" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="city" class="form-control" />
+                <span asp-validation-for="city" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="country" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="country" class="form-control" />
+                <span asp-validation-for="country" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="state" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="state" class="form-control" />
+                <span asp-validation-for="state" class="text-danger"></span>
+            </div>
+        </div>
+        @*<div class="form-group">
+                <label asp-for="UserId" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="UserId" class="form-control" />
+                    <span asp-validation-for="UserId" class="text-danger"></span>
+                </div>
+            </div>*@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
