--- a/comunida/Views/People/Edit.cshtml
+++ b/comunida/Views/People/Edit.cshtml
@@ -13,6 +13,69 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="ID" />
         <div class="form-group">
+            <label asp-for="name" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="name" class="form-control" />
+                <span asp-validation-for="name" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="last_name" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="last_name" class="form-control" />
+                <span asp-validation-for="last_name" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="telephone" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="telephone" class="form-control" />
+                <span asp-validation-for="telephone" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="email" class="form-control" />
+                <span asp-validation-for="email" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="about" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="about" class="form-control" />
+                <span asp-validation-for="about" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="availability" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="availability" class="form-control" />
+                <span asp-validation-for="availability" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="city" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="city" class="form-control" />
+                <span asp-validation-for="city" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="country" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="country" class="form-control" />
+                <span asp-validation-for="country" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="state" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="state" class="form-control" />
+                <span asp-validation-for="state" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <label asp-for="UserId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="UserId" class="form-control" />
