--- a/comunida/wwwroot/css/site.css
+++ b/comunida/wwwroot/css/site.css
@@ -36,6 +36,20 @@ textarea {
     padding-left: 0.5em;
 }
 
+
+#bgvideo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
