--- a/comunida/Views/Organizations/Index.cshtml
+++ b/comunida/Views/Organizations/Index.cshtml
@@ -39,7 +39,7 @@
     <h3 class="pull-left" style="margin-top: 0px;">
         Directorio - Organizaciones
     </h3>
-    <a class="btn btn-primary pull-right" asp-action="Create">Crear Organizaci&oacute;n</a>
+    <a class="btn btn-primary pull-right" asp-action="Create">Agregar Organizaci&oacute;n</a>
 </div>
 
 <div class="row">
