--- a/comunida/Views/People/Index.cshtml
+++ b/comunida/Views/People/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -86,4 +86,69 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
+
+
+<style>
+    .card {
+        border: 2px solid #d2d2d2;
+        padding: 6px;
+        border-radius: 2px;
+        background: #ffffff;
+        box-shadow: 0px 0px 6px #e6e6e6;
+    }
+
+    .card-title {
+        margin-bottom: 2px;
+        margin-top: 10px;
+    }
+
+    .card-text {
+        margin-bottom: 5px;
+    }
+
+    .card-footer {
+        margin-top: 5px;
+        padding-top: 5px;
+        border-top: 1px solid #d2d2d2;
+    }
+
+    .content-header {
+        margin: 25px 0px;
+    }
+</style>
+
+<h2>Mentores</h2>
+
+<div class="content-header clearfix">
+    <h3 class="pull-left" style="margin-top: 0px;">
+        Directorio - Mentores
+    </h3>
+    <a class="btn btn-primary pull-right" asp-action="Create">Agregar Mentor</a>
+</div>
+
+<div class="row">
+
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+            <div class="card">
+                <img class="card-img-top" src="../images/mentor.png" style="max-height: 246px; margin: 0 auto; display: table;">
+                <div class="card-block">
+                    <h4 class="card-title">@item.name @item.last_name</h4>
+                    <div class="card-text">
+                        @item.availability
+                    </div>
+                    <span>Tel&eacute;fono: @item.telephone</span>
+                </div>
+                <div class="card-footer">
+                    <div class="meta">
+                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
